# qt-travis-test

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
